src/mini-apps/cartomancy/cartomancy.css
/* customize for mini app! styling for buttons and onwards should remain untouched. */

/* styling for page */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@500&display=swap');

@font-face {
  font-family: "Xingkai";
  src: url('chinese.stxingka.ttf') format('truetype');
}

/* container for all elements on card page */ 
#card-display{
  display: none;
}

/* styling for introduction/instruction */ 
#intro {
  display: intial; 
  margin: auto;
  width: 800px;
  height: 800px;
  position: center; 
  background-image: url('/assets/cartomancy/instruction-image.png') ;
  background-size: cover;
  background-position: center center; 
  overflow : hidden; 
}

/* animation for introduction and deck of card*/ 
.drop-in, .start-button, .deck{
  animation: drop-in 1s ease 200ms backwards;
}

.drop-in-2, .start-button{
  animation: drop-in 1200ms ease 500ms backwards;
}

@keyframes drop-in {
  from {
    opacity: 0;
    transform: translateY(-100px);
  }
  to {
    opacity: 1;
    transform: translate(0px);
  }
}

body {
  display : flex;
  align-items : center;
  justify-content : center;  
  background-color: #43345d;
  justify-content: fit;
  /* background-color: rgb(178 29 29); */
  background-image: url('/assets/cartomancy/cartomancy-background.jpeg');
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  font-family: 'Luxurious Script', cursive;
  overflow: hidden;
  min-height : 800px;
  /*font-family: "Chinese Shanghai Demo";*/
}

#center-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 85%;
  height: 85%;
  transition: ease;
}

/* styling for card deck */
.deck {
  display: flex;
  position:relative; left:-125px; top: -46px;
  justify-content: center;
  flex-direction: row;
  opacity: 1;
  gap: 5px;
  transition: opacity 1s ease;
}

.pickContainer.p1 {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  background-image: url('/assets/cartomancy/card-holder.png');
  background-position: center;
  background-size: cover; 
  position: absolute;
  top: -2%;
  right: 0;
  width: 350px;
  height: 320px;
  color: white;
  margin: 20px;
  cursor: move;
  transition: opacity 1s ease;
  transition: 300ms ease-in-out;
  z-index: -1;
}

.pickContainer.p2 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url('/assets/cartomancy/card-holder.png');
  background-position: center;
  background-size: cover; 
  position: absolute;
  top: 48%;
  right: 0;
  transform: translate(0, -50%);
  width: 350px;
  height: 320px;
  color: white;
  margin: 20px;
  cursor: move;
  transition: opacity 1s ease;
  z-index: -1;

}
.pickContainer.p3 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url('/assets/cartomancy/card-holder.png');
  background-position: center;
  background-size: cover; 
  position: absolute;
  bottom: -2%;
  right: 0;
  width: 350px;
  height: 320px;
  color: white;
  margin: 20px;
  cursor: move;
  transition: opacity 1s ease;
  transition: 300ms ease-in-out;
  z-index: -1;
}

.read-fortune-space {
  position: fixed;
  right: 375px;
  display: none; /* toggled when 3 cards are selected */
  justify-content: center;
  align-items: center;
  top: 44%;
  width: 120px;
  height: 120px;
  border-radius: 50%;
  text-decoration: none;
  overflow: hidden;
  background-image: linear-gradient(to bottom, #1B1D15, #8257E5);
  transition: opacity 500ms ease-in-out;
}

#read-fortune-anchor {
  max-width: 85%;
  color: white;
  transition: opacity 1s ease;
  transition: 300ms ease-in-out;
  border-radius: 120%;
}

#reset-button {
  position: fixed;
  right: 375px;
  top: 60%;
  background-image: linear-gradient(to bottom, #1B1D15, #8257E5);
  width: 120px;
  height: 60px;
  display: none;
  border-radius: 30px;
  color: #FFFFFF;
  font-size: 16px;
  align-items: center;
  justify-content: center;
  font-family: 'Times New Roman', sans-serif;
}

#read-fortune-anchor img {
  max-width: 100%;
  filter: brightness(0) invert(1);
}

.hide {
  transition: opacity 1s;
  opacity: 0;
  pointer-events: none;
}

/* hide's cards but moving them out */
.hide-cards { 
  animation: animateDown 1.5s;
}

.card1, .card2, .card3 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url('/assets/cartomancy/cartomancy-card-back.png');
  background-position: center;
  background-size: cover; 
  width: 180px;
  height: 315px;
  color: white;
  margin: 20px;
  cursor: move;
  border: 1px solid black;
  border-radius: 10px;
  transition: opacity 1s ease;
  transition: 300ms ease-in-out;
}


.card1 + .card1, .card3 + .card3{
  margin-left: -15.5%; 
}

.card1:hover, .card2:hover, .card3:hover {
  filter: brightness(0.8);
  transform: rotate(-4deg); 
  box-shadow: 0px 0px 20px #FFD700;
  transition: 0.3s;
}
.card1:hover ~ .card1, .card2:hover ~ .card2, .card3:hover ~ .card3{
  z-index: 1;
  translate: 30px; 
}

.card2 + .card2{
  margin-left: -14.8%; 
}

.overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  transition: opacity 500ms;
  visibility: hidden;
  opacity: 0;
}
.overlay:target {
  visibility: visible;
  opacity: 1;
}

.box {
  border: 3px solid #666; 
  background-color: #ddd; 
  border-radius: .5em; 
  padding: 10px; 
  cursor: move; 
}
/* styling for fortune display */

.display-fortune {
  opacity: 0;
  transition: opacity 1s ease;
}

.display-fortune.show {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: white;
  opacity: 1;
}

.fortune-img img {
  width: 250px;
  height: 250px;
}

.fortune-text {
  width: 60%;
}

#fortune-message {
  margin: auto;
  max-width: 8em;  
}


/* styling for buttons */
.button-container-bottom-right {
  position: fixed;
  bottom: 20px;
  right: 20px;
}

.button-container-bottom-left {
  position: fixed;
  bottom: 20px;
  left: 20px;
}

.start-button {
  background-color: #fbeee0;
  border: 2px solid #422800;
  border-radius: 30px;
  box-shadow: #422800 4px 4px 0 0;
  color: #422800;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  font-size: 18px;
  padding: 0 18px;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.start-button:hover {
  background-color: #fff;
}

.start-button:active {
  box-shadow: #422800 2px 2px 0 0;
  transform: translate(2px, 2px);
}

@media (min-width: 768px) {
  .button-74 {
    min-width: 120px;
    padding: 0 25px;
  }
}

.menu-button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50px;
  height: 50px;
  background-color: #846e43;
  border-radius: 50%;
  margin-bottom: 10px;
  text-decoration: none;
  overflow: hidden;
}

.menu-button img {
  width: 30px;
  height: 30px;
  filter: brightness(0) invert(1);
}

.menu-button:hover {
  background-color: #857557;
}

/* styling for info pop up screen */
.info-popup {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 85px;
  width: 400px;
  height: 300px;
  border-radius: 10%;
  background-color: #846e43;
  text-align: center;
  justify-content: center;  
}

.choose-card { 
  /*transition: transform 0.8s ease;*/
  /*transform-style: preserve-3d; */ /*no 3d included*/
  left: 5000;
  top: 500;
  animation-name: moveAndTurn;
  animation-duration: 1s;
  animation-fill-mode: forwards;
}

.remove-card {
  transition: transform 0.8s;
  visibility: transparent;
}

.info-text {
  color: white;
  width: 90%;
  font-family: 'Noto Serif', serif;
}

/*
 * css for reading.cardShows
 */

#center-div.container{
  flex-direction: row;
  align-items: center; /* Center vertically */
  /*top: 50%;*/
  padding : 50px;  
}

.container .cardShow {
  position: relative;
  max-width : 380px;
  height : 415px;  
  background-color : #fff;
  margin : 30px 10px;
  padding : 20px 15px;

  display : flex;
  flex-direction : column;
  box-shadow : 0 5px 20px rgba(0,0,0,0.5);
  transition : 0.3s ease-in-out;
  border-radius : 15px;
}
.container .cardShow:hover {
  height : 650px;    
}


.container .cardShow .image {
  position : relative;
  width : 360px;
  height : 360px;

  top : -40%;
  left: 8px;
  box-shadow : 0 5px 20px rgba(0,0,0,0.2);
  z-index : 1;
}

.container .cardShow .image img {
  max-width : 100%;
  border-radius : 15px;
}

.container .cardShow .content {
  position : relative;
  top : -40px;
  padding : 10px 15px;
  color : #111;
  text-align : center;

  visibility : hidden;
  opacity : 0;
  transition : 0.3s ease-in-out;

}

.container .cardShow:hover .content {
  margin-top : 30px;
  visibility : visible;
  opacity : 1;
  transition-delay: 0.2s;

}


.read-container {
  margin-top: 10%;
  margin-left: 2%;
  display: flex;
  background-image: none;
  background-position: center;
}


/* 
 * animations
 */

@keyframes moveAndTurn {
  0% {
  }
  50% {
    /*transform: translateX(-50%);*/
  } 
  100% {
    /*transform: translate(-50%, -50%) rotate(360deg);*/
    transform: translate(0, 0) rotateY(90deg);
  }
}

@keyframes animateDown {
  0% {
  }
  100% {    
    transform: translateY(100%);
    opacity: 0;
  }
}

